--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,9 +6,7 @@
                     <img src="assets/icons/2.png" alt="logo1">
                     <span>LearnByte</span>
                 </div>
-                <p class="discription">Veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. </p>
+                <p class="discription">At LearnByte, we're your gateway to mastering the latest technologies in web development. With courses covering JavaScript, Angular, TypeScript, Node.js, Nest.js, Sequelize, and Express.js, our platform empowers learners of all levels. Our expert instructors deliver comprehensive content, ensuring you're equipped with the skills needed for real-world projects. Stay ahead of the curve with our daily tech blog, offering insights and updates on industry trends. Whether you're a beginner or a seasoned developer, LearnByte provides the resources and support you need to excel. Join us today and unlock your full potential in the ever-evolving world of technology.</p>
             </div>
             <div class="links">
                 <h2>Quick Links</h2>
