--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,8 +1,7 @@
 <div class="login-container">
     <div class="welcome">
         <h1>Welcome to, <span>LearnByte</span></h1>
-        <p>Here, we believe that building a strong professional network begins with your participation.
-            We are delighted to offer a modern and user-friendly service to ensure you have the best experience.</p>
+        <p>Your gateway to personalized learning. Safeguarding your journey through cutting-edge web development courses in JavaScript, Angular, TypeScript, Node.js, Nest.js, Sequelize, and Express.js, our login ensures your data's privacy. Access exclusive content tailored to your expertise level, track your progress, and engage with our vibrant community. Trust LearnByte for a seamless, protected learning experience. Login now and embark on your path to mastery.</p>
         <div class="banner"><img src="assets/auth/Frame.png" alt="Frame"></div>
     </div>
     <div class="log-form">
