--- a/src/app/shared/components/post-list/post-list.component.html
+++ b/src/app/shared/components/post-list/post-list.component.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="title" (click)="gotTo(card.name)">{{card?.name}}</h1>
+            <h1 class="title" (click)="gotTo(card.id)">{{card?.name}}</h1>
             <div class="other">
                 <div class="oth">
                     <img [src]="card?.other?.img" [alt]="card?.other?.name">
