right sidebar added

--- a/src/app/courses/javascript/lesssion/intro/intro.component.html
+++ b/src/app/courses/javascript/lesssion/intro/intro.component.html
@@ -1,1 +1,158 @@
-<p>intro works!</p>
+<div>
+    <p class="paragraph-description" id="understanding_javaScript">JavaScript, often abbreviated as JS, stands as a cornerstone in modern web
+        development, wielding immense power to craft dynamic and interactive web experiences. In this comprehensive
+        introduction, we'll delve into the fundamental concepts, key features, practical applications, advanced
+        techniques, and ecosystem of JavaScript, providing a solid foundation for beginners and insights for seasoned
+        developers.</p>
+    <h1 class="content-heading">
+        Understanding JavaScript:
+    </h1>
+    <p class="paragraph-description">JavaScript is a high-level, interpreted programming language primarily utilized for
+        client-side web development. Its versatility extends beyond web browsers, with applications ranging from
+        server-side development (Node.js) to mobile app development (React Native). JavaScript's ubiquity and
+        flexibility make it a vital tool in the web developer's toolkit.</p>
+    <h1 class="content-heading" id="key_features_of_javaScript">
+        Key Features of JavaScript:
+    </h1>
+    <h2 class="content-sub-heading">1. Dynamic Typing:</h2>
+    <p class="sub-paragraph-description">JavaScript employs dynamic typing, allowing variables to hold values of any
+        data type without explicit type
+        declarations. This flexibility simplifies code development by accommodating diverse data types and values.</p>
+    <h2 class="content-sub-heading">2. Prototypal Inheritance:</h2>
+    <p class="sub-paragraph-description">In JavaScript, objects inherit properties and behaviors from other objects
+        through prototypal inheritance. Unlike
+        classical inheritance in languages like Java, JavaScript's prototype-based inheritance facilitates code reuse
+        and
+        object-oriented programming paradigms.</p>
+    <h2 class="content-sub-heading">3. Functions as First-Class Citizens:</h2>
+    <p class="sub-paragraph-description">Functions in JavaScript are treated as first-class citizens, enabling them to
+        be assigned to variables, passed as
+        arguments to other functions, and returned as values from functions. This functional programming feature
+        enhances
+        code modularity and expressiveness.</p>
+    <h2 class="content-sub-heading">4. Asynchronous Programming:</h2>
+    <p class="sub-paragraph-description">Asynchronous programming in JavaScript enables non-blocking execution of code,
+        crucial for handling tasks such as
+        fetching data from external APIs and performing time-consuming operations. Callbacks, promises, and async/await
+        syntax facilitate asynchronous programming paradigms.</p>
+    <h2 class="content-sub-heading">5. DOM Manipulation:</h2>
+    <p class="sub-paragraph-description">The Document Object Model (DOM) serves as an interface for web browsers to
+        interact with HTML elements within web
+        pages. JavaScript empowers developers to manipulate the DOM dynamically, facilitating tasks like adding or
+        removing
+        elements, changing styles, and responding to user interactions.</p>
+    <h2 class="content-sub-heading">6. Error Handling:</h2>
+    <p class="sub-paragraph-description">JavaScript provides robust error handling mechanisms, including try...catch
+        blocks, to gracefully manage runtime
+        errors and exceptions. Proper error handling enhances code reliability and resilience, ensuring smooth execution
+        even in challenging scenarios.</p>
+    <h2 class="content-sub-heading">7. Module System:</h2>
+    <p class="sub-paragraph-description">With the introduction of ES6 (ECMAScript 2015), JavaScript adopted a
+        standardized module system, enabling developers
+        to organize code into reusable and encapsulated modules. This modular approach enhances code maintainability and
+        scalability, fostering better code organization and collaboration.</p>
+    <h2 class="content-sub-heading">8. Event-Driven Programming:</h2>
+    <p class="sub-paragraph-description">JavaScript follows an event-driven programming model, where actions or events
+        trigger corresponding event handlers.
+        This paradigm is prevalent in web development, enabling developers to create interactive and responsive user
+        interfaces.</p>
+    <h2 class="content-sub-heading">9. Functional Programming Paradigm:</h2>
+    <p class="sub-paragraph-description">JavaScript supports functional programming concepts such as higher-order
+        functions, immutability, and function
+        composition. Leveraging functional programming techniques can lead to cleaner, more concise, and maintainable
+        code.</p>
+    <h2 class="content-sub-heading">10. Arrow Functions:</h2>
+    <p class="sub-paragraph-description">ES6 introduced arrow functions, a concise syntax for writing anonymous
+        functions. Arrow functions offer lexical
+        scoping of the 'this' keyword and provide a more concise syntax for defining function expressions.</p>
+    <h2 class="content-sub-heading">11. Template Literals:</h2>
+    <p class="sub-paragraph-description">Template literals, introduced in ES6, provide a convenient way to create
+        multiline strings and embed expressions
+        within strings using {{symbal}} syntax. This feature enhances readability and simplifies string manipulation
+        tasks.</p>
+    <h2 class="content-sub-heading">12. Spread and Rest Operators:</h2>
+    <p class="sub-paragraph-description">ES6 introduced spread (...) and rest (...) operators, offering powerful tools
+        for manipulating arrays and objects.
+        The spread operator allows the expansion of iterable objects into individual elements, while the rest operator
+        gathers multiple elements into a single array or object.</p>
+    <h2 class="content-sub-heading">13. Destructuring Assignment:</h2>
+    <p class="sub-paragraph-description">Destructuring assignment, introduced in ES6, enables developers to extract
+        values from arrays or objects into
+        individual variables. This feature simplifies data manipulation and enhances code readability.</p>
+    <h1 class="content-heading" id="advanced_techniques">
+        Advanced Techniques and Practical Applications:
+    </h1>
+    <p class="paragraph-description">Beyond the basics, JavaScript offers advanced techniques and practical applications
+        in various domains, including:</p>
+    <h2 class="bullet-1">
+        Web Development:<span class="bullet-1-description">JavaScript powers dynamic web pages, interactive forms,
+            single-page applications (SPAs), and web-based games. Advanced frameworks like React, Angular, and Vue.js
+            leverage JavaScript to build scalable and maintainable web applications.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Server-Side Development:<span class="bullet-1-description">With Node.js, JavaScript can be used for server-side
+            scripting, enabling the development of scalable and efficient web servers and APIs. Express.js, a popular
+            Node.js framework, simplifies server-side development with its minimalist and flexible architecture.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Mobile App Development:<span class="bullet-1-description">Frameworks like React Native leverage JavaScript to
+            build cross-platform mobile applications for iOS and Android platforms. By using a single codebase,
+            developers can create native-like mobile experiences with JavaScript, reducing development time and
+            effort.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Desktop App Development:<span class="bullet-1-description">Electron.js allows developers to build desktop
+            applications using web technologies like HTML, CSS, and JavaScript. With Electron, developers can create
+            cross-platform desktop apps with native OS features, extending the reach of web technologies beyond the
+            browser.</span>
+    </h2>
+    <h1 class="content-heading" id="javaScript_ecosystem">
+        JavaScript Ecosystem:
+    </h1>
+    <p class="paragraph-description">JavaScript's ecosystem comprises a vast array of libraries, frameworks, tools, and
+        resources to enhance development workflows and productivity. Some key components of the JavaScript ecosystem
+        include:</p>
+    <h2 class="bullet-1">
+        Package Managers:<span class="bullet-1-description">npm (Node Package Manager) and Yarn are popular package
+            managers for managing JavaScript dependencies and libraries.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Build Tools:<span class="bullet-1-description">Webpack, Babel, and Parcel are essential build tools for
+            bundling, transpiling, and optimizing JavaScript code for production.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Testing Frameworks: <span class="bullet-1-description">Jest, Mocha, and Jasmine are widely used testing
+            frameworks for writing and running automated tests in JavaScript applications.</span>
+    </h2>
+    <h2 class="bullet-1">
+        Code Editors: <span class="bullet-1-description">Visual Studio Code, Sublime Text, and Atom are feature-rich
+            code editors with robust support for JavaScript development, including syntax highlighting, code completion,
+            and debugging features.</span>
+    </h2>
+    <h1 class="content-heading" id="getting_started_with_javaScript">
+        Getting Started with JavaScript:
+    </h1>
+    <p class="paragraph-description">To embark on your JavaScript journey, familiarity with HTML and CSS is recommended,
+        as JavaScript often complements these technologies in web development. Here's a step-by-step guide to kickstart
+        your learning:</p>
+    <h2 class="content-sub-heading">1. Setting Up Development Environment:</h2>
+    <p class="sub-paragraph-description">Choose a text editor or integrated development environment (IDE) like Visual
+        Studio Code, Sublime Text, or Atom for writing JavaScript code. These tools offer syntax highlighting, code
+        completion, and debugging features to streamline development.</p>
+    <h2 class="content-sub-heading">2. Embedding JavaScript in HTML:</h2>
+    <p class="sub-paragraph-description">Start by embedding JavaScript code directly within HTML documents using
+        &lt;script&gt; tags. Alternatively, you can create separate .js files and link them to HTML documents using
+        &lt;script src="path/to/script.js"&gt; &lt;/script&gt; tags.</p>
+    <h2 class="content-sub-heading">3. Practical Projects:</h2>
+    <p class="sub-paragraph-description">Reinforce your learning by working on practical projects, such as building a
+        simple web page with dynamic content, creating interactive forms with validation, or developing a basic game
+        using JavaScript.</p>
+    <h1 class="content-heading" id="js_intro_conclusion">
+        Conclusion:
+    </h1>
+    <p class="paragraph-description">JavaScript serves as a versatile and indispensable tool for web development,
+        offering a rich ecosystem of libraries, frameworks, and tools to streamline development workflows. Whether
+        you're a novice programmer or an experienced developer, mastering JavaScript opens doors to endless
+        possibilities in the digital landscape.</p>
+
+</div>
