--- a/src/app/shared/components/postdetail/postdetail.component.html
+++ b/src/app/shared/components/postdetail/postdetail.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="time">
                     <mat-icon>calendar_today</mat-icon>
-                    <span class="time">12 Jan 2024</span>
+                    <span class="time">{{postData?.created}}</span>
                 </div>
             </div>
         </div>
