--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -3,42 +3,34 @@
     flex-wrap: nowrap;
     margin-top: 50px;
 
-    .sidebar {
-        transition: all 0.3s ease-in-out;
-        background-color: #efebfb;
-        height: fit-content;
-        border-right: 1px solid rgba(127, 86, 217, 0.5294117647);
-        padding: 4px;
-        position: fixed;
-        overflow-y: scroll;
-        max-height: 92vh;
-        &::-webkit-scrollbar
-        {
-            width: 6px;
-            background-color: #ffffff;
-        }
-        &::-webkit-scrollbar-thumb
-        {
-            border-radius: 10px;
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: #dcd0ff;
-        }
-    }
-
     .content-area {
         transition: all 0.3s ease-in-out;
-        padding: 4px 1%;
+        padding: 4px;
+        width: 100%;
+        flex-wrap: nowrap;
+        position: relative;
 
-        .toggal-arrow {
+        .l-arrow {
             position: fixed;
-            color: #efebfb;
+            top: 48px;
 
-            span {
-                svg {
-                    background-color: #7f56d9;
-                    cursor: pointer;
-                    border-radius: 2px;
+            .l-toggal-arrow {
+                color: #efebfb;
+                position: absolute;
+                top: 5px;
+                right: -28px;
+
+                span {
+                    svg {
+                        background-color: #7f56d9;
+                        cursor: pointer;
+                        border-radius: 2px;
+                    }
                 }
+            }
+
+            .l-sidebar {
+                @extend .sidebar;
             }
         }
 
@@ -47,7 +39,86 @@
             max-height: fit-content;
             min-height: 100vh;
             margin-bottom: 10%;
-            padding: 0px 4%;
+            padding: 0px 2%;
         }
+
+        .r-arrow {
+            position: fixed;
+            top: 60px;
+            right: 0px;
+
+            .r-toggal-arrow {
+                color: #efebfb;
+                position: absolute;
+                left: -28px;
+                top: 0px;
+
+                span {
+                    svg {
+                        background-color: #7f56d9;
+                        cursor: pointer;
+                        border-radius: 2px;
+                    }
+                }
+            }
+
+            .r-sidebar {
+                border-left: 1px solid rgba(127, 86, 217, 0.5294117647);
+                border-bottom: 1px solid rgba(127, 86, 217, 0.5294117647);
+                border-top: 1px solid rgba(127, 86, 217, 0.5294117647);
+                border-right: none !important;
+                border-bottom-left-radius: 10px;
+                border-top-left-radius: 10px;
+                @extend .sidebar;
+            }
+        }
+    }
+}
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 15px;
+    opacity: 0;
+    transition: all .2s ease-in-out;
+    color: #efebfb;
+    cursor: pointer;
+    background-color: #7f56d9;
+    border-radius: 4px;
+    width: 26px;
+    border: none;
+    height: 26px;
+
+    &:hover {
+        background-color: #703edd;
+        color: #fafafa;
+    }
+
+    mat-icon {
+        font-size: 24px;
+    }
+}
+
+.show-scroll {
+    opacity: 1;
+}
+
+.sidebar {
+    transition: all 0.3s ease-in-out;
+    background-color: #efebfb;
+    border-right: 1px solid rgba(127, 86, 217, 0.5294117647);
+    padding: 4px;
+    overflow-y: scroll;
+    max-height: 92vh;
+    width: 200px;
+
+    &::-webkit-scrollbar {
+        width: 6px;
+        background-color: #ffffff;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+        background-color: #dcd0ff;
     }
 }
