--- a/src/app/shared/components/login/login.component.scss
+++ b/src/app/shared/components/login/login.component.scss
@@ -175,6 +175,7 @@
             justify-content: center;
             flex-wrap: wrap;
             gap: 20px;
+            margin-bottom: 30px;
 
             img {
                 width: 40px;
