--- a/src/app/shared/components/lsidebar/lsidebar.component.html
+++ b/src/app/shared/components/lsidebar/lsidebar.component.html
@@ -5,7 +5,7 @@
                 [expanded]="currentRoute === (lsidebarData?.route+'/v1/'+sbItem?.href)">
                 <mat-expansion-panel-header [ngStyle]="{'border-color':sbItem?.color}"
                     (click)="gotoRout(lsidebarData?.route+'/v1/'+sbItem?.href)"
-                    [ngClass]="currentRoute1=== ('/'+lsidebarData?.route+'/v1/'+sbItem?.href)?'active1':''">
+                    [ngClass]="currentRoute1 === ('/'+lsidebarData?.route+'/v1/'+sbItem?.href)?'active1':''">
                     <mat-panel-title>
                         <span>{{sbItem?.list_title}}</span>
                     </mat-panel-title>
@@ -13,7 +13,8 @@
                 <div class="expansion-body">
                     <ul class="expansion-body-item">
                         <li class="expansion-item" *ngFor="let subItem of sbItem?.sub_list;"
-                            [routerLink]="sbItem?.href+'/'+subItem?.href" routerLinkActive='active' (click)="openedPanel()">
+                            [routerLink]="sbItem?.href+'/'+subItem?.href" routerLinkActive='active'
+                            (click)="openedInnerPanel()">
                             <a href="javascript:void(0);">{{subItem?.sub_title}}</a>
                         </li>
                     </ul>
