--- a/src/app/shared/components/postdetail/postdetail.component.scss
+++ b/src/app/shared/components/postdetail/postdetail.component.scss
@@ -79,6 +79,7 @@
                 height: auto;
                 object-fit: fill;
                 border-radius: 10px;
+                max-height: 450px;
             }
         }
 
@@ -86,7 +87,7 @@
             p {
                 color: #06241B;
                 padding: 4px 0px;
-                font-size: 18px;
+                font-size: 16px;
                 font-weight: 500;
                 margin-bottom: 30px;
             }
