--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<button [ngClass]="{'show-scroll': showScroll}" class="scroll-to-top" [ngStyle]="{ 'right':RsidebarTog?'210px':'15px'}"
+<!-- <button [ngClass]="{'show-scroll': showScroll}" class="scroll-to-top" [ngStyle]="{ 'right':RsidebarTog?'210px':'15px'}"
     (click)="scrollToTop()">
     <mat-icon>keyboard_arrow_up</mat-icon>
-</button>
+</button> -->
