--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -44,7 +44,7 @@
 
         .r-arrow {
             position: fixed;
-            top: 60px;
+            top: 52px;
             right: 0px;
 
             .r-toggal-arrow {
@@ -69,6 +69,7 @@
                 border-right: none !important;
                 border-bottom-left-radius: 10px;
                 border-top-left-radius: 10px;
+                overflow-y: auto !important;
                 @extend .sidebar;
             }
         }
@@ -110,15 +111,4 @@
     overflow-y: scroll;
     max-height: 92vh;
     width: 200px;
-
-    &::-webkit-scrollbar {
-        width: 6px;
-        background-color: #ffffff;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-        background-color: #dcd0ff;
-    }
 }
